--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
+      href="/image/logoSA.png"
     />
     <meta
       name="viewport"
