--- a/index.html
+++ b/index.html
@@ -6,18 +6,82 @@
       rel="icon"
       type="image/svg+xml"
       href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
+      href="/image/logoSA.png"
     />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Attendance</title>
   </head>
   <body>
     <div id="root"></div>
-    <script
-      type="module"
-      src="/src/App.tsx"
-    ></script>
+    <script type="module" src="/src/App.tsx"></script>
   </body>
 </html>
